name:                fabian
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/fabian#readme
license:             BSD3
license-file:        LICENSE
author:              Fabian Rios
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable fabian
  hs-source-dirs:      server
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-html
                     , bytestring
                     , cryptohash
                     , either
                     , mongoDB
                     , mtl
                     , opaleye
                     , product-profunctors
                     , postgresql-simple
                     , servant-server
                     , servant-blaze
                     , text
                     , uuid
                     , wai
                     , wai-extra
                     , warp
